--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-ÿþ
+<!DOCTYPE html>
+
+<html lang="fr">
+
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylecv.css">
+    <title>B.G Web developer </title>
+</head>
+
+<body>
+    <div class="main">
+        <header>
+            <h1>BENJAMIN GILBERT</h1>
+            <p class="soustitre">DEVELOPPEUR WEB</p>
+        </header>
+
+        <section class="partie1">
+            <div class="exp">
+                <h2>EXPERIENCE </h2>
+                <li class="listexp">
+                    <ul>
+                        <p>uqhgomzohsoughv zDGH nfgqn gG RG KNg zg ngn ng suHSDG sddgJ Nsdgl SDg HG egk DSG HdGKDJJSDJ s
+                            dh
+                            d H DFgLSDG SDG LDoserg d </p>
+                    </ul>
+                    <ul>
+                        <p>dfhqdfoqdfdlj qfjg lqjg lqfjg j qlrjg qdf rj j</p>
+                    </ul>
+                </li>
+
+            </div>
+
+            <div class="presentaion">
+                <div class="photo"></div>
+                <p>fdgjodqfg dqj qdfj qe,bpfj qph qdfh qdfjgq dfg qdfgj qdfjg , qfjg qpdfgjqd jpdjfj jqf jqdfj jfdq jq
+                </p>
+            </div>
+            <div class="CONTACT">
+                <h2>CONTACT</h2>
+                <li class="listecontact">
+                    <ul>
+                        <p>1, rue saint franÃ§ois</p>
+                    </ul>
+                    <ul>
+                        <p>b.gilbert220789@gmail.com</p>
+                    </ul>
+                    <ul>
+                        <p>0658689912</p>
+                    </ul>
+                    <ul>
+                        <p>Benjamin Gilbert</p>
+                    </ul>
+                    <ul>
+                        <p>Benjamin Gilbert</p>
+                    </ul>
+                </li>
+            </div>
+
+        </section>
+
+
+        <section class="partie2">
+            <div class="formation">
+                <h2>FORMATION</h2>
+                <li class="listeformation">
+                    <ul>
+                        <p>Openclassroom</p>
+                    </ul>
+                    <ul>
+                        <p>Ecole Pivaut</p>
+                    </ul>
+                </li>
+            </div>
+
+            <div class="atouts">
+                <h2>ATOUTS</h2>
+                <li>
+                    <ul>
+                        <h3>Sens du relationnel/travail en Ã©quipe</h3>
+                        <p>qhrgoq ofhgo dfg jdfog joqfdg f gjq dfjgo jf qodfjg </p>
+                    </ul>
+                    <ul>
+                        <h3>Autonome/Perspicace</h3>
+                        <p>fgoqsfjg sofg qqdfgo oqqfg jfg </p>
+                    </ul>
+                    <ul>
+                        <h3>Rigoureux/Polyvalent</h3>
+                        <p>fsdjgo dofjg ojqdfg jffj dfgjqjÃ rrj r fjg q</p>
+                    </ul>
+                </li>
+
+
+            </div>
+
+
+
+            <div class="competence">
+                <h2>COMPETENCES</h2>
+                <div class="niv1">
+                    <h3>HTML5 & CSS</h3>
+                    <h3>SEO</h3>
+                </div>
+                <div class="niv2">
+                    <h3>MySQL</h3>
+                    <h3>JAVASCRIPT</h3>
+                </div>
+            </div>
+
+        </section>
+
+    </div>
+
+
+</body>
+
+</html>
