--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="presentaion">
                 <div class="photo"></div>
-                <p>fdgjodqfg dqj qdfj qe,bpfj qph qdfh qdfjgq dfg qdfgj qdfjg , qfjg qpdfgjqd jpdjfj jqf jqdfj jfdq jq
+                <p>fdgjodqfg dqj qdfj qe,bpfj qph qdfh qdfjgq dfg qdfgj qdfjg , qfjgg qpdfgjqd jpdjfj jqf jqdfj jfdq jq
                 </p>
             </div>
             <div class="CONTACT">
